# django-permafrost

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: django.yml  permafrost_ci.yml  permafrost_develop.yml  python-publish.yml  python-test.yml
develop/develop/: settings.py  urls.py
develop/example/: tests.py  views.py
develop/templates/: base.html
develop/templates/account/: account_inactive.html  email.html  email_confirm.html  layout_card.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
develop/templates/example/: index.html
docs/: conf.py  index.md  index.rst
docs/modules/: models.rst  views.rst
permaforce/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
permaforce/api/: seriealizers.py  urls.py  views.py
permaforce/templates/permaforce/: index.html
permafrost/: __version__.py  admin.py  api.py  apps.py  backends.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
permafrost/api/: seriealizers.py  urls.py  views.py
permafrost/fixtures/: unit_test.json
permafrost/management/commands/: permcatagories.py  permlist.py
permafrost/migrations/: 0001_initial.py  0002_auto_20200204_2122.py  0002_auto_20200218_2234.py  0003_auto_20200204_2127.py  0004_auto_20200204_2129.py  0005_auto_20200204_2130.py  0005_auto_20200311_1701.py  0006_auto_20200313_2056.py  0006_rolepermission_permission.py  0007_auto_20200204_2148.py  0007_auto_20200313_2119.py  0008_auto_20200204_2205.py  0008_permafrostrole_group.py  0009_permafrostrole_group_update.py  0009_role_group.py  0010_permafrostrole_group_not_null.py  0012_auto_20200729_1710.py  0013_permafrostrole_category.py  0014_convert_category.py  0015_auto_20200606_0042.py  0018_auto_20201124_1534.py  0018_permafrostrole_description.py
permafrost/templates/permaforce/: base.html
permafrost/templates/permafrost/: base.html  index.html  permafrostrole_detail.html  permafrostrole_form.html  permafrostrole_list.html  permafrostrole_manage.html  permissions_modal.html
permafrost/views/: __init__.py  permafrost.py
setup/: build.sh  dist.sh  test.sh
src/permafrost/: admin.py  apps.py  backends.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
src/permafrost/migrations/: 0001_initial.py  0002_auto_20200218_2234.py  0003_auto_20200227_2356.py  0004_auto_20200310_2228.py  0005_auto_20200311_1701.py  0006_auto_20200313_2056.py  0007_remove_permafrostrole_group.py  0008_permafrostrole_group.py  0009_permafrostrole_group_update.py  0010_auto_20200504_2344.py  0011_auto_20200506_2128.py  (+9 more)
(+11 files in other folders)
